  * Add debian/postgresql-common.preinst: Remove obsolete conffiles
    (cronjob and /etc/postgresql-common/autovacuum.conf) on upgrade.
  * Drop support for pre-8.1 clusters, together with all hacks and
    workarounds for those. Add Conflicts: to postgresql-{7.4,8.0}, to
    ensure that this version isn't used with ancient servers any more.

 -- Martin Pitt <mpitt@debian.org>  Sat, 14 Feb 2009 21:06:06 +0100

postgresql-common (95) experimental; urgency=low

  * Add automatic building of PostgreSQL tsearch/stem dictionaries:
    - Add pg_updatedicts: Build dictionaries and affix files from installed
      hunspell/myspell dictionary packages.
    - Add t/150_tsearch_stemming.t: Test cases for pg_updatedicts, tsearch
      functionality, and word stem handling.
    - t/001_packages.t: Ensure that hunspell-en-us is installed, above new
      test relies on it.
    - debian/postgresql-common.install: Install pg_updatedicts.
    - debian/rules: Create man page from pg_udpatedicts POD.
    - Add debian/postgresql-common.triggers: Register interest on
      /usr/share/myspell/dicts.
    - debian/postgresql-common.postinst: Call pg_updatedicts on upgrade to
      this version, fresh install, and our trigger.
    - debian/postgresql-common.postrm: Remove /var/cache/postgresql on purge.
    - (LP: #301770)

 -- Martin Pitt <mpitt@debian.org>  Sat, 06 Dec 2008 11:35:52 -0800

postgresql-common (94) unstable; urgency=low

  * t/070_non_postgres_clusters.t: Test that all cluster configuration files
    are owned by the cluster superuser. Reproduces #481349.
  * pg_createcluster: Make the cluster configuration directory, "start.conf",
    and "environment" owned by the cluster superuser instead of root.
    (Closes: #481349)
  * t/030_errors.t: Check behaviour of starting of clusters with colliding
    ports. Reproduces #472627.
  * pg_ctlcluster: Error out with a port collision message if another cluster
    is already running on the port. (Closes: #472627)